[package]
edition = "2021"
name = "query-process"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.52.0", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]}

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27.1", features = ["user", "process"] }
procfs = { version = "0.16.0"}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
